formation_zenika_k8s/kube/Exercices/workspaces/Lab5/network-policy/shell-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: shell
  namespace: networkpolicy
  labels:
    name: shell
    lab: network-policy
spec:
  containers:
  - name: shell
    image: busybox
    command: ["sh", "-c", "sleep 3600"]
